#291:Do not throw error if unable to decode subframe frames, just log error
#290:Unable to save Wav files if has existing non-contiguous metadata chunks separated by data chunk
#270:NullPointerException with some WAV tag conversion
#297:Allow Wav files that are larger than 2GB
#298:Move to Java 1.8
#071:Rewrite Mp4 TagWriter so it doesn't need to use temporary files
#247:Not able to save this m4a
#302:java.nio.BufferUnderflowException when reading a corrupted mp3 file
#303:java.lang.NullPointerException when reading a corrupted audio file
#259:For Mp3 change adjustPaddingInPlace() so uses FileChannel like FlacTagWriter.insertUsingChunks()
#211:RandomFile can fail FileNotFoundException just if file being used by another process
#305:FlacTagWriter should use ShiftData like Mp4 and MP3 so only needs enough memory to store one chunk
#301:In Mp3 when metadata becomes shorter we dont reclaim the space instead just left as padding
#209:Write chunk size property not observed

2.2.5
#033:Added getAudioStartPos() and getAudioEndPos() methods to AudioHeader interface and implemented for most formats
#036:Added getNoSamples() to AudioHeader interface
#040:If ID3 frame marked as UTF-16 but has no BOM we now look to see if first byte contains data or not, if doesn't likely to be BE otherwise LE
#041:Fix equality checks for tags so based on contents not simple identity check
#061:Ensure if you try and set a field value to null an IllegalArgumentException will be thrown for all formats
#049:Mp4 now able to write file with udta atom plus unknown subatoms as well as meta atom
#077:Added support writing Aiff artwork
#078:Track length not being calculated in for Wav files
#079:Aiff Bitrate not calculated correctly
#481:Fixed handling of an empty FrameBodyTDAT frame preventing reading of valid TYER frame

2.2.4
Added support for reading/writing Aiff and Wav metadata
Now requires Java 1.7
Added support for deploying versions to bintray