@@ -3,6 +3,7 @@ package org.jaudiotagger.issues;
 import org.jaudiotagger.AbstractTestCase;
 import org.jaudiotagger.audio.AudioFile;
 import org.jaudiotagger.audio.AudioFileIO;
+import org.jaudiotagger.tag.FieldKey;
 
 import java.io.File;
 
@@ -35,5 +36,31 @@ public class Issue309Test extends AbstractTestCase
             ex.printStackTrace();
         }
         assertNotNull(e);
+    }
+
+    public void testM4a() throws Exception
+    {
+        File orig = new File("testdata", "test309.m4a");
+        if (!orig.isFile())
+        {
+            System.err.println("Unable to test file - not available");
+            return;
+        }
+
+
+        Exception e=null;
+        try
+        {
+            final File testFile = AbstractTestCase.copyAudioToTmp("test309.m4a");
+            AudioFile af = AudioFileIO.read(testFile);
+            af.getTag().setField(FieldKey.MUSICBRAINZ_WORK,"fkmgfkjkfjbvkfdjvbkfnbfn");
+            af.commit();
+        }
+        catch(Exception ex)
+        {
+            e=ex;
+            ex.printStackTrace();
+        }
+        assertNull(e);
     }
 }
