@@ -113,6 +113,7 @@ Summarise Changes
 #305:FlacTagWriter should use ShiftData like Mp4 and MP3 so only needs enough memory to store one chunk
 #301:In Mp3 when metadata becomes shorter we dont reclaim the space instead just left as padding
 #209:Write chunk size property not observed
+#309:Tag edition fails for m4a file - and corrupts tag
 
 2.2.5
 #033:Added getAudioStartPos() and getAudioEndPos() methods to AudioHeader interface and implemented for most formats
